@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+lib/collect.pl.in: Prepend an underscore to names generated for implicitly
+ defined animations.
+Andreas Kirschbaum 2008-11-23
+
 Rewrite SockList handling to not malloc/free buffers but use stack
  space instead. Encapsulate most accesses to SockList instances into
  lowlevel.c.
